--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,21 @@
         android:id="@+id/refreshGPS"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <Button
-            android:id="@+id/refreshGPSButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Refresh GPS to BEGIN"
-            android:drawableRight="@drawable/ic_refresh"/>
+       <LinearLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_gravity="center"
+           android:orientation="vertical">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Your location is loading..."/>
+           <ProgressBar
+               android:layout_gravity="center"
+               android:layout_width="180dp"
+               android:layout_height="180dp"
+               />
+       </LinearLayout>
     </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
