--- a/app/src/main/res/layout/single_picture.xml
+++ b/app/src/main/res/layout/single_picture.xml
@@ -20,4 +20,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:src="@android:drawable/ic_delete" />
+    <ProgressBar
+        android:id="@+id/loadImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 </RelativeLayout>
