--- a/app/src/main/res/menu/event_manu.xml
+++ b/app/src/main/res/menu/event_manu.xml
@@ -4,13 +4,16 @@
     <item
         android:id="@+id/profile_item"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_user"
+        android:icon="@drawable/ic_profile_white"
         android:title="Profile"
-        app:showAsAction="never">
+        app:showAsAction="always">
     </item>
     <item
-        android:id="@+id/refresh_list"
-        android:icon="@drawable/ic_refresh_white"
-        android:orderInCategory="100"
-        android:title="Refresh list"></item>
+        android:id="@+id/favorites"
+        android:icon="@drawable/ic_favorites_white"
+        android:orderInCategory="99"
+        android:title="Refresh list"
+        app:showAsAction="always">
+
+    </item>
 </menu>
