--- a/app/src/main/res/layout-v17/activity_get_started.xml
+++ b/app/src/main/res/layout-v17/activity_get_started.xml
@@ -54,7 +54,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_margin="5dp"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 />
             <de.hdodenhof.circleimageview.CircleImageView
@@ -103,14 +103,14 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
                     android:src="@drawable/ic_user" />
 
                 <EditText
                     android:id="@+id/nameText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="@string/my_name"
+                    android:hint="My name"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:inputType="textPersonName"/>
@@ -125,7 +125,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:paddingRight="5dp"
+                    android:paddingEnd="5dp"
                     android:src="@drawable/ic_age" />
 
                 <Spinner
@@ -147,7 +147,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_gender"
-                    android:paddingRight="5dp"/>
+                    android:paddingEnd="5dp"/>
             <RadioGroup
                 android:id="@+id/gender"
                 android:layout_width="wrap_content"
@@ -157,14 +157,14 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/femaleRadio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/female"
+                    android:text="Female"
                     android:textColor="@color/white"
-                    android:paddingRight="5dp"/>
+                    android:paddingEnd="5dp"/>
                 <RadioButton
                     android:id="@+id/maleRadio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/male"
+                    android:text="Male"
                     android:textColor="@color/white"/>
             </RadioGroup>
             </LinearLayout>
@@ -224,7 +224,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_gravity="center"
                 android:layout_margin="15dp"
                 android:background="@drawable/trans_rectangle_white"
-                android:text="@string/get_started"
+                android:text="Get Started"
                 android:textColor="@color/pink" />
         </LinearLayout>
     </ScrollView>
