--- a/app/src/main/res/layout-v17/activity_main.xml
+++ b/app/src/main/res/layout-v17/activity_main.xml
@@ -18,7 +18,7 @@
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="@string/your_location_is_loading"/>
+               android:text="Your location is loading..."/>
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="180dp"
@@ -32,8 +32,8 @@
         android:orientation="horizontal"
         android:background="@drawable/location_background"
         android:paddingTop="10dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="10dp"
+        android:paddingStart="5dp"
+        android:paddingEnd="10dp"
         android:paddingBottom="10dp">
         <ImageView
             android:layout_width="wrap_content"
@@ -46,8 +46,8 @@
             android:text="My Location..."
             android:layout_weight="1"
             android:layout_gravity="center"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"/>
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"/>
         <ImageView
             android:id="@+id/btnGetLoc"
             android:layout_width="wrap_content"
