--- a/app/src/main/res/layout-v17/join_event_dialog.xml
+++ b/app/src/main/res/layout-v17/join_event_dialog.xml
@@ -6,7 +6,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/join_the_event"
+        android:text="Join the Event"
         android:textColor="@color/black"
         android:padding="10dp"
         android:textSize="20sp"/>
@@ -24,7 +24,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/would_you_like_to_join"
+            android:text="would you like to join: "
             android:padding="10dp"
             />
         <TextView
@@ -44,14 +44,14 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/how_are_you_connected"
+            android:text="how are you connected? "
             android:padding="10dp"
             />
         <EditText
             android:id="@+id/connectedView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/bride_s_friend"
+            android:hint="Bride's friend..."
             android:textColor="@color/black"
             android:padding="5dp"
             />
@@ -60,29 +60,28 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/event_warning"
+        android:text="please note that you can only join one event. so you will be removed from previous events!"
         android:padding="10dp"
         android:textColor="@color/black"/>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="right|end"
-
+    android:layout_gravity="end"
     android:padding="5dp">
     <TextView
         android:id="@+id/cancelView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        android:paddingRight="15dp"
+        android:text="cancel"
+        android:paddingEnd="15dp"
         android:textSize="15sp"
         android:textColor="@color/colorAccent"/>
     <TextView
         android:id="@+id/joinView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/join"
-        android:paddingRight="10dp"
+        android:text="join"
+        android:paddingEnd="10dp"
         android:textSize="15sp"
         android:textColor="@color/colorAccent"/>
 
