--- a/app/src/main/res/layout-v17/person_card_layout.xml
+++ b/app/src/main/res/layout-v17/person_card_layout.xml
@@ -28,9 +28,7 @@
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:layout_height="40dp"
-            android:layout_marginLeft="-30dp"
             android:layout_marginStart="-30dp"
-            android:layout_marginRight="20dp"
             android:layout_marginEnd="20dp"
             android:background="@drawable/trans_rectangle_light_purple"
             android:layout_gravity="center">
@@ -45,7 +43,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="30dp"
+                android:layout_gravity="start"
                 android:paddingStart="30dp"
                >
                 <TextView
@@ -58,7 +56,6 @@
                     />
                 <TextView
                     android:id="@+id/myAge"
-                    android:paddingLeft="5dp"
                     android:paddingStart="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -69,20 +66,19 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="30dp"
+                android:layout_gravity="start"
                 android:paddingStart="30dp"
                 android:orientation="horizontal">
                 <TextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/kashur"
+                    android:text="kashur:"
 
                     android:layout_gravity="center"
                     />
                 <TextView
                     android:id="@+id/kashur"
-                    android:paddingLeft="5dp"
                     android:paddingStart="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -97,23 +93,17 @@
                 android:layout_height="40dp"
                 android:src="@drawable/ic_favorite_checked"
                 android:layout_gravity="center"
-                android:layout_marginRight="20dp"
                 android:layout_marginEnd="20dp"
-                android:autoMirrored="true"
                 />
             <ImageView
                 android:id="@+id/sendImage"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_forward"
-                android:layout_marginRight="10dp"
                 android:layout_marginEnd="10dp"
                 android:elevation="4dp"
                 android:layout_gravity="center"
-                android:background="?android:attr/selectableItemBackground"
-                android:rotationY="@integer/angle_rtl_180"
-                android:scaleX="@dimen/scale_rtl_1"
-                />
+                android:background="?android:attr/selectableItemBackground"/>
         </LinearLayout>
     </LinearLayout>
 
