--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:id="@+id/locationText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Location..."
+            android:text="@string/my_location"
             android:layout_weight="1"
             android:layout_gravity="center"
             android:paddingLeft="5dp"
@@ -60,7 +60,7 @@
         android:id="@+id/addEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add new event in my Location"
+        android:text="@string/add_new_event_in_my_location"
         android:foreground="?android:attr/selectableItemBackground"
         android:background="@drawable/trans_rectangle_purple"
         android:layout_gravity="center"
